# platform_external_crosvm

./: Android.bp  Cargo.toml  OWNERS  OWNERS.android  TEST_MAPPING  all2android.sh  cargo2android_module.bp
aarch64/: Android.bp  Cargo.toml  TEST_MAPPING
acpi_tables/: Android.bp  TEST_MAPPING
arch/: Android.bp  Cargo.toml  TEST_MAPPING
assertions/: Android.bp  TEST_MAPPING
audio_streams/: Android.bp
base/: Android.bp  TEST_MAPPING  cargo2android.json
bit_field/: Android.bp  TEST_MAPPING
cros_async/: Android.bp  Cargo.toml  TEST_MAPPING
crosvm_control/: Android.bp
crosvm_plugin/: Android.bp
cuttlefish/: Android.bp  crosvm_bionic
data_model/: Android.bp  TEST_MAPPING
devices/: Android.bp  Cargo.toml  TEST_MAPPING
devices/patches/: Android.bp.patch
devices/src/: proxy.rs
devices/src/virtio/: block.rs  console.rs  queue.rs  rng.rs  virtio_pci_device.rs
devices/src/virtio/fs/: worker.rs
devices/src/virtio/gpu/: backend.rs  mod.rs  protocol.rs  virtio_2d_backend.rs  virtio_3d_backend.rs  virtio_gfxstream_backend.rs  virtio_gpu.rs
devices/src/virtio/snd/: mod.rs
disk/: Android.bp  TEST_MAPPING
enumn/: Android.bp  TEST_MAPPING
fuse/: Android.bp  Cargo.toml  TEST_MAPPING
gpu_buffer/: Android.bp  TEST_MAPPING
gpu_display/: Android.bp  TEST_MAPPING
gpu_renderer/: Android.bp  TEST_MAPPING
hypervisor/: Android.bp  TEST_MAPPING
io_jail/: Android.bp
io_uring/: Android.bp  TEST_MAPPING
kernel_cmdline/: Android.bp  TEST_MAPPING
kernel_loader/: Android.bp  TEST_MAPPING
kvm/: Android.bp  TEST_MAPPING  cargo2android.json
kvm_sys/: Android.bp  TEST_MAPPING
libcras_stub/: Android.bp
libcrosvm_control/: Android.bp
linux_input_sys/: Android.bp  TEST_MAPPING
msg_socket/: Android.bp  TEST_MAPPING
net_sys/: Android.bp  TEST_MAPPING
net_util/: Android.bp  TEST_MAPPING
p9/: Android.bp  TEST_MAPPING
patches/: Android.bp.patch
power_monitor/: Android.bp
protos/: Android.bp  TEST_MAPPING
qcow/: Android.bp
qcow_utils/: Android.bp  Cargo.toml  TEST_MAPPING
rand_ish/: Android.bp  TEST_MAPPING
resources/: Android.bp  TEST_MAPPING
rutabaga_gfx/: Android.bp  build.rs  cargo2android.json
seccomp/: Android.bp  crosvm_seccomp_policy_product_packages.mk  gen_android.sh  (+2 more)
(+94 files in other folders)
